kakao API connect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">layout</string>
+    <string name="app_name">Change</string>
+    <string name="kakao_app_key">bc4268f769729e8a6c3d8157ce7bf912</string>
 </resources>
